--- a/Latex Document/Thesis.bib
+++ b/Latex Document/Thesis.bib
@@ -336,7 +336,7 @@
 
 @article{tolocsi2011classification,
   title={Classification with correlated features: unreliability of feature ranking and solutions},
-  author={Tolo{\c{s}}i, Laura and Lengauer, Thomas},
+  author={Tolosi, Laura and Lengauer, Thomas},
   journal={Bioinformatics},
   volume={27},
   number={14},
@@ -354,4 +354,13 @@
   pages={5186},
   year={2019},
   publisher={MDPI}
+}
+
+@inproceedings{zhang2010study,
+  title={Study of the hydraulic system simulation and PID autotuning based on relay feedback of the tantalum-niobium tube straightener},
+  author={Zhang, Zhiwei and Wu, Zhongyou and Liu, Fuchun and Song, Jinchun},
+  booktitle={2010 5th IEEE Conference on Industrial Electronics and Applications},
+  pages={1253--1257},
+  year={2010},
+  organization={IEEE}
 }
